[gd_scene load_steps=7 format=3 uid="uid://cc4gm4iiyhk8i"]

[ext_resource type="Script" path="res://card_ui/card_test.gd" id="1_ed5up"]
[ext_resource type="Script" path="res://card_ui/card_state_machine.gd" id="1_jgfex"]
[ext_resource type="Script" path="res://card_ui/idle_card_state.gd" id="3_x413l"]
[ext_resource type="Script" path="res://card_ui/hovered_card_state_node.gd" id="4_xv0dm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eso6i"]
bg_color = Color(0.270588, 0.278431, 0.294118, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.192157, 0.529412, 0.635294, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufbqr"]
size = Vector2(25, 30)

[node name="CardTest" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -231.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ed5up")

[node name="CardBackground" type="Panel" parent="."]
custom_minimum_size = Vector2(25, 30)
layout_mode = 0
offset_right = 25.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eso6i")

[node name="Detector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_ufbqr")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_node")]
script = ExtResource("1_jgfex")
starting_node = NodePath("IdleCardStateNode")

[node name="IdleCardStateNode" type="Node" parent="CardStateMachine"]
script = ExtResource("3_x413l")

[node name="HoveredCardStateNode" type="Node" parent="CardStateMachine"]
script = ExtResource("4_xv0dm")

[node name="ClickedCardStateNode" type="Node" parent="CardStateMachine"]

[node name="DraggedCardStateNode" type="Node" parent="CardStateMachine"]

[node name="ReleasedCardStateNode" type="Node" parent="CardStateMachine"]

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
